spark/k8s/minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: minio-web
      port: 9001
      targetPort: 9001
    - name: minio-s3
      port: 9000
      targetPort: 9000
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
subsets:
  - addresses:
      - ip: 10.233.0.91
    ports:
      - name: minio-web
        port: 9001
      - name: minio-s3
        port: 9000
